frontendmentor-projects/qr-code-component-main/style.css
/* Google font */
@import url("https://fonts.googleapis.com/css2?family=Outfit:wght@100..900&display=swap");

/* CSS Reset */
* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

/* Base Styles */
body {
  background-color: hsl(212, 45%, 89%);
  height: 100vh;
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  align-items: center;
  font-family: "Outfit", sans-serif;
  font-weight: 400;
  font-size: 16px;
  color: hsl(218, 44%, 22%);
}

.container {
  height: 100%;
  display: flex;
  justify-content: center;
  align-items: center;
}

/* Card styles */

@media screen and (min-width: 768px) {
  .card {
    width: 420px;
    padding: 24px;
    border-radius: 16px;
    background-color: hsl(0, 0%, 100%);
    box-shadow: 4px 4px 8px hsl(216, 15%, 48%);
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
  }

  .card-image {
    margin-bottom: 12px;
  }

  .card-image img {
    width: 100%;
    border-radius: 16px;
  }

  .card-content {
    padding: 0 20px;
    margin-bottom: 16px;
  }

  .card-content h1 {
    font-size: 28px;
    font-weight: 700;
    margin-bottom: 18px;
    text-align: center;
  }

  .card-content p {
    font-size: 18px;
    text-align: center;
    line-height: 1.5;
  }
}

/* Style for Tablet and Mobile screens */

@media screen and (max-width: 767px) {
  body {
    background-color: black;
    padding: 16px 24px;
  }

  footer {
    color: hsl(0, 0%, 100%);
  }

  footer a {
    color: orangered;
  }

  .container {
    max-width: 560px;
    background-color: hsl(212, 45%, 89%);
    border-radius: 4px;
    display: flex;
    flex-direction: row;
    justify-content: center;
    align-items: center;
  }

  .card {
    width: 90%;
    background-color: hsl(0, 0%, 100%);
    padding: 16px 24px;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    border-radius: 16px;
    box-shadow: 4px 4px 8px hsl(216, 15%, 48%);
  }

  .card-image {
    margin-bottom: 8px;
  }

  .card-image img {
    width: 100%;
    border-radius: 16px;
  }

  .card-content {
    padding: 0 12px;
    margin-bottom: 24px;
  }

  .card-content h1 {
    font-size: 28px;
    margin-bottom: 12px;
    text-align: center;
    font-weight: 700;
  }

  .card-content p {
    font-size: 18px;
    text-align: center;
    line-height: 1.5;
  }
}

